[build-system]
requires = ["setuptools>=64", "wheel", "versioneer"]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440-post"
versionfile_source = "bluesky_queueserver_api/_version.py"
versionfile_build = "bluesky_queueserver_api/_version.py"
tag_prefix = "v"

[tool.black]
line-length = 115
target-version = ['py310']
include = '\.pyi?$'
force-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''
